History slider upgrades: preventOverflow, avoid overlap with content
* Upgrade to bootstrap-slider 11.0.2, actually master,
  actually my fork with new `preventOverflow` option
* Add bottom margin to avoid overlap with message content.
  Given the always-visible tooltips, this seems best for now.
* Port relevant CSS to Stylus
* Switch bootstrap-slider CSS from Grunt copy to `import`

--- a/client/message.styl
+++ b/client/message.styl
@@ -70,6 +70,16 @@
 .dark .my-emoji
   background: hsl(60, 100%, 20%)
 
+// History
+
+.historySlider
+	margin-left: 25px // 15px to match panel + 10px for tick radius
+	margin-right: 25px
+	margin-top: 5px
+	margin-bottom: 15px // avoid overlap between tooltip and content
+	.slider.slider-horizontal
+		width: 100%
+
 // BelowEditor
 
 .below-editor-alert
